--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div class="game">
             <div class="user-box">
                 <span id="user" class="user-choice">
-                    <img id="user-choice-img"  src="">
+                    <img id="user-choice-img"  src="" alt="user choice">
                 </span>
                 <span class="tag">You</span>
             </div>
             <span class="vs">VS</span>
             <div class="computer-box">
                 <span id="computer" class="computer-choice">
-                    <img id="computer-choice-img"  src="">
+                    <img id="computer-choice-img"  src="" alt="computer choice">
                 </span>
                 <span class="tag">Computer </span>
             </div>
