--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <h1><span class="icons">✊🤚✌️</span>Rock Paper Scissors Game</h1>
     </header>
 
-    <section class="main">
+    <main class="main">
 
         <div class="game">
             <div class="user-box">
                 <span id="user" class="user-choice">
-                    <img id="user-choice-img"  src="" alt="user choice">
+                    <img id="user-choice-img"  src="" alt="">
                 </span>
                 <span class="tag">You</span>
             </div>
             <span class="vs">VS</span>
             <div class="computer-box">
                 <span id="computer" class="computer-choice">
-                    <img id="computer-choice-img"  src="" alt="computer choice">
+                    <img id="computer-choice-img"  src="" alt="">
                 </span>
                 <span class="tag">Computer </span>
             </div>
@@ -94,7 +94,7 @@
         <div class="try-div">
             <button id="try-again" class="try-again">Try Again</button>
         </div>
-    </section>
+    </main>
 
 
     <script src="main.js"></script>
